# pipeflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PLAN.md  README.md  SESSION_SUMMARY.md  build.rs  flake.nix  requirements.md
.github/workflows/: ci.yml  release.yml
.mindhub/: .gitignore
assets/: pipeflow.desktop
benches/: graph_rendering.rs
docs/: REFACTOR_TICKETS.md  RELEASING.md  REMOTE.md  SAFETY.md  SNAPSHOTS.md  mixer-node-architecture.md  ux-foundation.md
help/: audio.json  filters.json  general.json  graph.json  groups.json  safety.json  shortcuts.json  snapshots.json
src/: cli.rs  headless.rs  icon.rs  lib.rs  main.rs
src/app/: command_handling.rs  event_processing.rs  feedback.rs  initialization.rs  mixer_nodes.rs  mixer_persistence.rs  mod.rs  snapshots.rs  types.rs  ui_panels.rs
src/core/: commands.rs  config.rs  errors.rs  history.rs  mod.rs  state.rs
src/core/state/: animation.rs  connection.rs  graph_state.rs  layer_visibility.rs  mod.rs  proptests.rs  serde_helpers.rs  tests.inc  tests.rs  ui_state.rs
src/domain/: audio.rs  explain.rs  filters.rs  graph.rs  groups.rs  mixer_node.rs  mod.rs  rules.rs  safety.rs  snapshots.rs
src/network/: adapter.rs  client.rs  mod.rs  server.rs
src/network/proto/: pipeflow.proto
src/pipewire/: connection.rs  events.rs  meter_stream.rs  meters.rs  mod.rs
src/ssh/: mod.rs
src/ui/: command_palette.rs  filters.rs  graph_view.rs  groups.rs  help.rs  help_texts.rs  mixer.rs  mod.rs  node_panel.rs  rules.rs  settings.rs  sidebar.rs  snapshots.rs  theme.rs  toolbar.rs
src/ui/graph_view/: geometry.rs  helpers.rs  types.rs
src/util/: id.rs  layout.rs  mod.rs  spatial.rs
tickets/epic-group-mixer/: README.md
tickets/epic-group-mixer/add-a-group-master-strip/: README.md
tickets/epic-group-mixer/add-solo-and-dim-controls-to-the-mixer/: README.md
tickets/epic-group-mixer/add-stereo-link-and-unlink-controls/: README.md
tickets/epic-group-mixer/define-wave-level-dependency-plan-for-mixer-epic/: README.md
(+13 files in other folders)
